--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
+    "github-markdown-css": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
+    "react-markdown": "^8.0.7",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
